# mcp-server-template

./: .env.example  .gitignore  README.md  examples.http  pyproject.toml  render.yaml  requirements.txt  supervisord.conf  test.txt  test_poke.py
docs/: SETUP_GUIDE.md
examples/: sample_usage.py
poke-tests/: feature-ideas.md  hello.md
src/: __init__.py  coupon_detector.py  github_client.py  poke_client.py  security.py  server.py  sheets_integration.py  webhook_handlers.py
tests/: test_code_search.py  test_poke.py  test_repo_access.py
