[project]
name = "mcp-server-template"
version = "0.1.0"
description = "A minimal FastMCP server template for Render deployment with streamable HTTP transport"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
dev = "src.server:main"
start = "src.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
